# tilemaker

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README  README.md  build.sh  docker-compose.yml  pyproject.toml
.github/workflows/: container.yml  pypi.yml  ruff.yml
example/: cat_from_astropy.py  catalog.py  example_cat.csv  example_cat.json  fits.py  make_cat.py  simple.py  sqlvsmodel.py
static/: index.html
static/assets/: index-CBJzntzC.js  index-Da165-ik.css
tilemaker/: __init__.py  database.py  settings.py
tilemaker/analysis/: __init__.py  aperture.py  core.py  histogram.py  products.py  providers.py  types.py
tilemaker/client/: __init__.py  add.py  cli.py  delete.py  search.py  simple.py
tilemaker/metadata/: __init__.py  boxes.py  core.py  database.py  definitions.py  fits.py  generation.py  orm.py  sources.py
tilemaker/orm/: __init__.py  highlights.py  histogram.py  map.py  service.py  sources.py  tiles.py
tilemaker/processing/: __init__.py  extractor.py  fits.py  fits_simple.py  renderer.py  simple.py
tilemaker/providers/: caching.py  core.py  fits.py
tilemaker/scripts/: fits.py  remove.py  serve.py
tilemaker/server/: __init__.py  analysis.py  app.py  auth.py  bands.py  caching.py  highlights.py  histogram.py  layers.py  map_groups.py  maps.py  search.py  sources.py
