[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["templates"]

[tool.setuptools.package-data]
tilemaker = ["server/static/*", "server/static/assets/*"]

[project]
name = "tilemaker"
version = "2.0.2"
requires-python = ">=3.11"
dependencies = [
    "pixell",
    "pydantic-settings",
    "numpy",
    "numpydantic",
    "fastapi",
    "uvicorn",
    "matplotlib",
    "astropy",
    "fastapi-cache2",
    "typer",
    "soauth",
    "cachetools",
    "pymemcache",
    "structlog"
]

[project.scripts]
tilemaker = "tilemaker.client.cli:main"

[tool.ruff.lint]
extend-select = ["I"]
